EE-5709: Provide a safe way to run batch tests without using mule-test-module.properties
_ More hacking...
_ Need to change how to calculate shared libs to avoid having to write every artifact on the test annotation
- findFailures -> 880 (mostly jms things)

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -47,6 +47,16 @@
         <module>extensions-soap-support</module>
     </modules>
 
+    <!--<dependencies>-->
+        <!--&lt;!&ndash;// TODO(pablo.kraan): runner - why do I need this &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.mule.tests</groupId>-->
+            <!--<artifactId>mule-tests-model</artifactId>-->
+            <!--<version>${project.version}</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+    <!--</dependencies>-->
+
     <build>
         <plugins>
             <plugin>
