--- a/tests/component-plugin/pom.xml
+++ b/tests/component-plugin/pom.xml
@@ -53,7 +53,7 @@
             <groupId>org.mule.tests</groupId>
             <artifactId>mule-tests-unit</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.mule.runtime</groupId>
