--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -31,6 +31,7 @@
         <module>integration</module>
         <module>parsers-plugin</module>
         <module>runner-plugin</module>
+        <module>model</module>
     </modules>
 
     <build>
